Release 0.2-1 (//):
  * If NULL is returned (on canceled user input), it is now invisible.
  * Switch to LaTeX vignette.
  * Add password hashing examples via argon2 to the vignette.
  * Register native routines.
  * Fixed clang compiler warning in os detection.
  * Deprecate print_stderr() for message().

Release 0.2-0 (5/31/2016):
  * C lib re-organization.
  * Zero out buffer when finished.
  * Add noblank option.
  * Better tcltk wrapper for the noblank option.

Release 0.1-2 (5/13/2016):
  * Fix vignette title.
  * Add console notification when using tcltk (Rich FitzJohn)
  * Add tests for terminal reader.
  * Add screenshots to vignette.

Release 0.1-1 (4/25/2016):
  * Add package vignette.
  * Minor documentation tweaks.

Release 0.1-0 (2/25/2016):
  * Release to CRAN.
  * Print *'s in the terminal (not my preference, but seems popular).
  * Add tcltk method (WCC).
  * Fixes for OS X.
  * Better handling for C-c and backspace.
  * Import functionality from remoter.